--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "5.7.*",
         "laravel/passport": "^7.0",
         "laravel/tinker": "^1.0",
+        "pusher/pusher-http-laravel": "^4.2",
         "pusher/pusher-php-server": "~3.0"
     },
     "require-dev": {
